# manus-core

./: CMakeLists.txt  README.md  manus-config.cmake.in
include/manus/: manipulator.h
launch/: dummy.yaml
msg/: manipulator.msg
python/: CMakeLists.txt
python/manus/: __init__.py
resources/camera/: board1.yaml
resources/models/: manipulator1.yaml
src/: debug.cpp  files.cpp  manipulator.cpp
src/camera/: artrack.cpp  cameraserver.cpp
src/dummy/: main.cpp
src/planner/: planner.cpp
